--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
-  <title>Gundam Breaker 3 - Break Edition: Abilities</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="data.js"></script>
-  <script>
+<title>Gundam Breaker 3 - Break Edition: Abilities</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="data.js"></script>
+<script>
 _.templateSettings = {
   interpolate: /\{\{(.+?)\}\}/g
 }
 $(function(event) {
-	var tplSrc = $("#ability-template").html()
-	var tpl = _.template(tplSrc, {variable:"it"})
-	var $list = $("#ability-list")
-	for (var i=0; i < GB3.Abilities.length; ++i) {
-	  var itemData = GB3.Abilities[i]
+  var tplSrc = $("#ability-template").html()
+  var tpl = _.template(tplSrc, {variable:"it"})
+  var $list = $("#ability-list")
+  var index = null
+  for (var i=0; i < GB3.Abilities.length; ++i) {
+    var itemData = GB3.Abilities[i]
     var itemIndex = itemData.l.toLowerCase().charAt(0)
     var holder = document.createElement("template")
     var item = {index: null}
@@ -27,11 +28,11 @@ $(function(event) {
     }
     _.extend(item, itemData)
     holder.innerHTML = tpl(item)
-    $list.append(holder.content)	
+    $list.append(holder.content)
   }
 });
-  </script>
-  <style>
+</script>
+<style>
 .ability {
   margin-bottom: 0.3em
 }
@@ -45,7 +46,7 @@ $(function(event) {
 .ability-special {
   color: #e90;
 }
-  </style>
+</style>
 </head>
 <body>
 <template id="ability-template">
