--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ $(function(event) {
 <div class="container">
   <div class="row">
     
-    <div class="col-sm">
+    <div class="flex-column">
       <nav id="alpha-index">
-        <ul class="nav nav-pills nav-stacked">
+        <ul class="nav flex-column">
           <li><a href="#a">A</a></li>
           <li><a href="#b">B</a></li>
           <li><a href="#c">C</a></li>
