indexing for abilities (but breaks scrollspy), data fix

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(function() {
         else if (sortKey == "e") {
             return {
                 label: itemSortValue,
-                id: itemSortValue.charAt(0)
+                id: itemSortValue
             }
         }
     }
