--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
           <span class="derive-result">Full Armor Gundam</span>
           <ul class="derive-bases">
             <li class="derive-base">Gundam</li>
-            <li class="derive-base">Psyco Zaku</li>
+            <li class="derive-base">Psycho Zaku</li>
           </ul>
         </li>
 
