--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,17 @@
         </li>
 
         <li class="ability">
+          <span class="ability-label">Sub-generator</span>
+          <span class="ability-effect">Option Charge Speed</span>
+          <span class="ability-value">+20%</span>
+          <span class="ability-rarity">special</span>
+          <ul class="ability-sources">
+            <li class="ability-source">Buster Gundam Leg</li>
+            <li class="ability-source">Hyper Impulse Long-Range Sniper Rifle</li>
+          </ul>
+        </li>
+
+        <li class="ability">
           <span class="ability-label">Super DRAGOON mobile weapon wing</span>
           <span class="ability-effect">Boost Speed</span>
           <span class="ability-value">+10%</span>
