--- a/index.html
+++ b/index.html
@@ -1538,6 +1538,30 @@
           </ul>
         </li>
 
+        <li class="derive">
+          <span class="derive-result">Rick Dias</span>
+          <ul class="derive-bases">
+            <li class="derive-base">G-3 Gundam</li>
+            <li class="derive-base">Gundam NT-1</li>
+            <li class="derive-base">Z Plus C1</li>
+          </ul>
+        </li>
+
+        <li class="derive">
+          <span class="derive-result">Z Plus C1</span>
+          <ul class="derive-bases">
+            <li class="derive-base">Rick Dias</li>
+            <li class="derive-base">Z Plus A1</li>
+          </ul>
+        </li>
+
+        <li class="derive">
+          <span class="derive-result">Lightning Gundam</span>
+          <ul class="derive-bases">
+            <li class="derive-base">Z Plus C1</li>
+          </ul>
+        </li>
+
       </ul>
 
     </div>
