small derives update

--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,45 @@
             <li class="derive-base">Z Plus C1</li>
           </ul>
         </li>
+        
+        <li class="derive">
+          <span class="derive-result">Duel Gundam</span>
+          <ul class="derive-bases">
+            <li class="derive-base">V2 Gundam</li>
+            <li class="derive-base">Gundam F91</li>
+          </ul>
+        </li>
 
+        <li class="derive">
+          <span class="derive-result">Gundam Barbatos</span>
+          <ul class="derive-bases">
+            <li class="derive-base">Gundam Exia</li>
+          </ul>
+        </li>
+        
+        <li class="derive">
+          <span class="derive-result">00 Quan[T]</span>
+          <ul class="derive-bases">
+            <li class="derive-base">Gundam Exia</li>
+          </ul>
+        </li>
+
+        <li class="derive">
+          <span class="derive-result">Oowashi Akatsuki</span>
+          <ul class="derive-bases">
+            <li class="derive-base">Freedom Gundam</li>
+            <li class="derive-base">Strike Rouge (IWSP)</li>
+          </ul>
+        </li>
+
+        <li class="derive">
+          <span class="derive-result">Freedom Gundam</span>
+          <ul class="derive-bases">
+            <li class="derive-base">Strike/Aile Strike Gundam</li>
+            <li class="derive-base">Strike Rouge (IWSP)</li>
+            <li class="derive-base">Gundam Exia</li>
+          </ul>
+        </li>
       </ul>
 
     </div>
